--- a/consent.html
+++ b/consent.html
@@ -5,6 +5,7 @@
       <div>
         <form method="post" enctype="application/x-www-form-urlencoded" action="authorize">
           <AZ-INJECT-HIDDEN-INPUT-FIELDS/>
+          <input type="hidden" name="scope" value="openid"/>
           <p>Greeting..</p><DISPLAY-RESOURCE-OWNER/>
           <p>This app </p><OAUTH-APPLICATION-NAME/><p> would like to access your data.</p>
           <div>
