--- a/consent.html
+++ b/consent.html
@@ -1,9 +1,9 @@
 <html lang="en" xml:lang="en">
-  <head><title>Request for permission</title></head>
+  <head><title>Request for permission v2</title></head>
   <body class="customconsent">
     <div>
       <div>
-        <form method="post" enctype="application/x-www-form-urlencoded" action="authorize">
+        <form method="get" enctype="application/x-www-form-urlencoded" action="authorize">
           <AZ-INJECT-HIDDEN-INPUT-FIELDS/>
           <input type="hidden" name="scope" value="openid"/>
           <p>Greeting..</p><DISPLAY-RESOURCE-OWNER/>
