--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <html lang="en" xml:lang="en">
   <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/></head>
   <body>
-    <form method="POST" enctype="application/x-www-form-urlencoded" action="authorize">
+    <form method="POST" action="authorize">
       <h1>Please sign in</h1>
       <p>Username </p>
       <p style="text-indent: 0em;"><input type="text" name="username" required="required" /> </p>
